--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@
 		min-height:500px;
 		background-color:#9187ff;
 		}
-        #sidebar2{
+        .sidebar2{
 		text-align:center;
 		float:right;
 		width:20%;
